--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -24,7 +24,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="allReviewNavItems" style="display:none;">
                     <a
                         class="nav-link"
                         aria-current="page"
@@ -43,4 +43,5 @@
         </div>
     </div>
 </nav>
+
 
