--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -14,7 +14,7 @@
 
     function getData()
     {
-        localStorage.setItem('loggedIn', document.getElementById("logged_in").textContent)
+        localStorage.setItem('loggedIn', document.getElementById("logged_in").textContent);
     }
 </script>
 </body>
