--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -18,6 +18,7 @@
 
                 if (localStorage.getItem('logged_in').includes("true")) {
                     document.getElementById("allReviewNavItems").style.display = "block";
+                    document.getElementById("logout").style.display = "block";
                 }
             }
         </script>
