--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -40,6 +40,11 @@
                     <i class="bi bi-pencil-fill me-1"></i>
                 </button>
             </a>
+            <a href="/redirect" style="display:none;">
+            <button class="button" type="button">
+                Logout
+            </button>
+            </a>
         </div>
     </div>
 </nav>
