--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -40,11 +40,11 @@
                     <i class="bi bi-pencil-fill me-1"></i>
                 </button>
             </a>
-            <a href="/redirect" style="display:none;">
-            <button class="button" type="button">
-                Logout
-            </button>
-            </a>
+            <form action="/redirect" method="GET">
+                <button id="logout" class="button" type="submit" onclick="localStorage.clear();" style="display:none;">
+                    Logout
+                </button>
+            </form>
         </div>
     </div>
 </nav>
