--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -20,6 +20,11 @@
                     document.getElementById("allReviewNavItems").style.display = "block";
                     document.getElementById("logout").style.display = "block";
                 }
+                else
+                {
+                    document.getElementById("allReviewNavItems").style.display = "none";
+                    document.getElementById("logout").style.display = "none"; 
+                }
             }
         </script>
     </body>
