--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -24,7 +24,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
-                <li class="nav-item" id="allReviewNavItems" style="display:none;">
+                <li class="nav-item" id="allReviewNavItems" style="display: none">
                     <a
                         class="nav-link"
                         aria-current="page"
@@ -35,13 +35,13 @@
             </ul>
             <!--Teachers pay teachers site-->
             <a href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
-                <button class="btn btn-outline-dark" type="button">
+                <button class="button" type="button">
                     Chickenlooper's Coop
                     <i class="bi bi-pencil-fill me-1"></i>
                 </button>
             </a>
             <form action="/redirect" method="GET">
-                <button id="logout" class="button" type="submit" onclick="localStorage.clear();" style="display:none;">
+                <button id="logout" class="button" type="submit" onclick="localStorage.clear();" style="display: none; margin-left: 20px;">
                     Logout
                 </button>
             </form>
