--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -25,8 +25,7 @@
           </div>
           <div class="fields">
             <textarea type="text" maxlength="250" id="review_text" class="customText" 
-            rows="4" cols="50" name="review_text" required
-            value="<%=reviewData[0].review_text %>"></textarea>
+            rows="4" cols="50" name="review_text" required><%=reviewData[0].review_text %></textarea>
             <br><br>
             <button type="submit">Save</button>
           </div>
