--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -22,8 +22,8 @@
                 }
                 else
                 {
-                    document.getElementById("allReviewNavItems").style.display = "none";
-                    document.getElementById("logout").style.display = "none"; 
+                    document.getElementById("allReviewNavItems").style.display = "block";
+                    document.getElementById("logout").style.display = "block";
                 }
             }
         </script>
