--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -40,7 +40,7 @@
                     <i class="bi bi-pencil-fill me-1"></i>
                 </button>
             </a>
-            <form action="/redirect" method="GET">
+            <form action="/" method="GET">
                 <button id="logout" class="button" type="submit" onclick="localStorage.clear();" style="display: none; margin-left: 20px;">
                     Logout
                 </button>
