--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -16,12 +16,7 @@
                 let sYear = new Date().getFullYear();
                 document.getElementById("copyright").innerHTML = "Copyright &copy; A Little Bit of Grandma " + sYear + "."
 
-                if (localStorage.getItem('loggedIn').includes("true")) {
-                    document.getElementById("allReviewNavItems").style.display = "block";
-                    document.getElementById("logout").style.display = "block";
-                }
-                else
-                {
+                if (localStorage.getItem('logged_in').includes("true")) {
                     document.getElementById("allReviewNavItems").style.display = "block";
                     document.getElementById("logout").style.display = "block";
                 }
