--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,7 +14,7 @@
             <label for="reviewer_name">Reviewer Name:</label>
           </div>
           <div class="fields">
-            <input type="text" id="reviewer_name" name="reviewer_name" required
+            <input type="text" id="reviewerName" name="reviewerName" required
             value="<%=reviewData[0].reviewer_name %>">
           </div>
         </div>
@@ -24,8 +24,8 @@
             <label for="review_text">Review Text:</label>
           </div>
           <div class="fields">
-            <textarea type="text" maxlength="250" id="review_text" class="customText" 
-            rows="4" cols="50" name="review_text" required><%=reviewData[0].review_text %></textarea>
+            <textarea type="text" maxlength="250" id="reviewText" class="customText" 
+            rows="4" cols="50" name="reviewText" required><%=reviewData[0].review_text %></textarea>
             <br><br>
             <button type="submit">Save</button>
           </div>
