Changed button style on edit

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -27,7 +27,7 @@
             <textarea type="text" maxlength="250" id="reviewText" class="customText" 
             rows="4" cols="50" name="reviewText" required><%=reviewData[0].review_text %></textarea>
             <br><br>
-            <button type="submit">Save</button>
+            <button class="button" type="submit">Save</button>
           </div>
         </div>
       </form> 
