--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -20,6 +20,10 @@
                     document.getElementById("allReviewNavItems").style.display = "block";
                     document.getElementById("logout").style.display = "block";
                 }
+                else {
+                    document.getElementById("allReviewNavItems").style.display = "block";
+                    document.getElementById("logout").style.display = "block";
+                }
             }
         </script>
     </body>
