--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,7 +9,7 @@
       <form action="/editReview" method="POST">
         <div class="form-rows">
           <div class="labels">
-            <input type="hidden" id="review_id" name="review_id" required
+            <input type="hidden" id="reviewID" name="reviewID" required
             value="<%=reviewData[0].review_id %>">
             <label for="reviewer_name">Reviewer Name:</label>
           </div>
