--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -9,6 +9,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- function that gets the current date for the copyright in the footer -->
+        <!-- this function also shows the All Reviews Tab and a Logout button when you are logged in -->
         <script>
             function pageSetup()
             {
