--- a/views/allReviews.ejs
+++ b/views/allReviews.ejs
@@ -1,4 +1,5 @@
 <%- include('Head') %> <%- include('Navigation') %> <%- include('Header') %>
+<!-- Table of all reviews -->
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <table class="table table-bordered">
