--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -1,5 +1,5 @@
 <%- include('Head') %><%- include('Header') %>
-
+<!-- redirect page after you log in, when you log out, etc. -->
 <body onload="getData();">
     <br><br>
     <h1 style="text-align: center;">
