--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -14,6 +14,7 @@
         >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item">
+                    <!-- shop tab -->
                     <a
                         class="nav-link"
                         aria-current="page"
@@ -21,9 +22,12 @@
                         >Shop</a
                     >
                 </li>
+                <!-- about tab -->
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
+                <!-- all reviews tab that only appears when you're logged in -->
+                <!-- (only admin can view) -->
                 <li class="nav-item" id="allReviewNavItems" style="display: none">
                     <a
                         class="nav-link"
